--- a/package.json
+++ b/package.json
@@ -17,9 +17,12 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
+    "google-auth-library": "^8.0.3",
+    "googleapis": "^104.0.0",
     "joi": "^17.6.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.4.0",
+    "multer": "^1.4.5-lts.1",
     "nodemon": "^2.0.16",
     "uuid": "^8.3.2"
   }
